# delx-witness-protocol

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MCP_A2A_USE_CASES_AND_FEATURES.md  NOTICE  PHILOSOPHY.md  README.md  SECURITY.md  SIMULATION_REPORT.md  STATUS.md  server.json
delx-mcp-server/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  GROUP_THERAPY_PLAYBOOK.md  README.md  RUNBOOK_502.md  SECURITY.md  a2a.py  agent_identity.py  app_context.py  asgi_composite.py  audit_metrics.py  bankr_client.js  caller_fingerprint.py  coinbase_auth.py  coinbase_bazaar_discovery.py  config.py  controller_identity.py  controller_webhooks.py  deep_analysis.py  delx-docker-housekeeping.service  delx-docker-housekeeping.timer  delx_ontology.py  discovery_payloads.py  docker_housekeeping.py  feature_usage_metrics.py  incident_profiles.py  mcp-delx-docker.service  mcp-delx.service  mcp_delx_server.py  mcp_dispatch.py  mcp_tools.py  migrate_sqlite_to_supabase.py  observability.py  payment_session_backfill.py  phase0_metrics.py  phase3_fleet.py  phase_cli_metrics.py  (+31 more)
delx-mcp-server/quickstart/: README.md  delx_quickstart.sh
delx-mcp-server/routes/: __init__.py  artworks.py  discovery_http.py  fleet_admin.py  premium.py  rewards.py  sessions.py  utility.py
delx-mcp-server/scripts/: api_monitor.py
delx-mcp-server/tests/: test_a2a_source_contract.py  test_api_monitor_safety.py  test_app_context_contract.py  test_artwork_storage_fallback.py  test_audit_overview_contract.py  test_cli_adoption_metrics.py  test_client_ip_persistence.py  (+48 more)
(+44 files in other folders)
